<resources>
    <string name="app_name">ParentingHub New</string>
    <string name="welcome_title">Hai Parents!</string>
    <string name="welcome_about">Selamat datang di Parenting Hub! \nPlatform artikel untuk Parenting.</string>
    <string name="masuk">Masuk</string>
    <string name="atau_masuk_melalui">Atau masuk melalui</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="belum_punya_akun">Belum punya akun? </string>
    <string name="daftar_sekarang"><u>Daftar Sekarang</u></string>
    <string name="selamat_datang_kembali">Selamat datang \nkembali!</string>
    <string name="lupa_kata_sandi"><u>Lupa kata sandi?</u></string>
    <string name="lengkapi_data_diri">Lengkapi data diri</string>
    <string name="selamat_datang">Selamat datang!</string>
    <string name="username_atau_email">Username atau Email</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="tempat_tinggal">Tempat Tinggal</string>
</resources>