<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECF7F9"
    tools:context=".WelcomeScreenActivity">

    <ImageView
        android:id="@+id/bg_bottom"
        android:layout_width="425dp"
        android:layout_height="437dp"
        android:background="@drawable/bg_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <ImageView
        android:id="@+id/iv_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:background="@drawable/ic_family"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_title1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/iv_title"
        android:layout_width="135dp"
        android:layout_height="31dp"
        android:background="@drawable/title"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/iv_center"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tv_title1"
        style="@style/TextAppearance1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/welcome_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/iv_center"
        app:layout_constraintBottom_toTopOf="@id/tv_title2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_title2"
        style="@style/TextAppearance1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/welcome_about"
        android:textSize="18sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/tv_title1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_masuk"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/btn_masuk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/masuk"
        android:layout_margin="15dp"
        style="@style/TextAppearance1"
        android:textColor="@color/colorBlueBackground"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="14sp"
        android:background="@drawable/bg_button_white"
        app:layout_constraintBottom_toTopOf="@id/tv_title3"
        app:layout_constraintTop_toBottomOf="@id/tv_title2"/>

    <TextView
        android:id="@+id/tv_title3"
        style="@style/TextAppearance1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atau_masuk_melalui"
        android:textSize="14sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/btn_masuk"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linear1"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/linear2"
        app:layout_constraintTop_toBottomOf="@id/tv_title3">

        <Button
            android:id="@+id/btn_facebook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_button_white_border_blue"
            android:text="@string/facebook"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorBlue"
            android:textStyle="bold"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:drawableLeft="@drawable/facebook"
            style="@style/TextAppearance1"/>

        <Button
            android:id="@+id/btn_google"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_button_white_border_red"
            android:text="@string/google"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorRed"
            android:textStyle="bold"
            android:paddingLeft="53dp"
            android:paddingRight="53dp"
            android:drawableLeft="@drawable/google"
            style="@style/TextAppearance1"/>

<!--    <androidx.cardview.widget.CardView-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@drawable/bg_button_white_border_blue"-->
<!--        android:layout_marginRight="10dp"-->
<!--        app:cardCornerRadius="50dp"-->
<!--        android:layout_weight="1">-->

<!--        <TextView-->
<!--            android:id="@+id/btn_facebook"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/facebook"-->
<!--            android:layout_margin="10dp"-->
<!--            android:textColor="@color/colorBlue"-->
<!--            android:textStyle="bold"-->
<!--            android:drawableLeft="@drawable/facebook"-->
<!--            android:drawablePadding="5dp"-->
<!--            android:layout_gravity="center"-->
<!--            style="@style/TextAppearance1"/>-->

<!--    </androidx.cardview.widget.CardView>-->

<!--    <androidx.cardview.widget.CardView-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@drawable/bg_button_white_border_red"-->
<!--        app:cardCornerRadius="50dp"-->
<!--        android:layout_weight="1">-->

<!--        <TextView-->
<!--            android:id="@+id/btn_google"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/google"-->
<!--            android:layout_margin="10dp"-->
<!--            android:textColor="@color/colorRed"-->
<!--            android:textStyle="bold"-->
<!--            android:drawableLeft="@drawable/google"-->
<!--            android:drawablePadding="5dp"-->
<!--            android:layout_gravity="center"-->
<!--            style="@style/TextAppearance1"/>-->

<!--    </androidx.cardview.widget.CardView>-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear2"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/linear1"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_title4"
            style="@style/TextAppearance1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/belum_punya_akun"
            android:textSize="14sp"
            android:gravity="end" />

        <TextView
            android:id="@+id/tv_title5"
            style="@style/TextAppearance1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/daftar_sekarang"
            android:layout_marginLeft="5dp"
            android:textSize="14sp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>