<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".RegisterScreenActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/bg_top_login"
        android:id="@+id/bg_top"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/title_white"
        android:layout_width="118dp"
        android:layout_height="29dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="33dp"
        android:background="@drawable/title_white"
        app:layout_constraintLeft_toRightOf="@id/iv_back"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="30dp"
        android:layout_height="28dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selamat_datang"
        style="@style/TextAppearance1"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/title_white"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <ImageView
        android:id="@+id/right_image"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/center_image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_white" />

    <EditText
        android:id="@+id/et_nama"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/bg_edittext_lightblue"
        android:hint="Nama Lengkap"
        style="@style/EditTextAppearance"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/right_image"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/bg_edittext_lightblue"
        android:hint="Username"
        style="@style/EditTextAppearance"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/et_nama"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/bg_edittext_lightblue"
        android:hint="Email"
        style="@style/EditTextAppearance"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/et_username"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtPass"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorText"
        app:layout_constraintTop_toBottomOf="@id/et_email">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/bg_edittext_lightblue"
            android:id="@+id/et_password"
            android:hint="@string/kata_sandi"
            android:padding="15dp"
            style="@style/EditTextAppearance"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/et_username"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtPassConfirm"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorText"
        app:layout_constraintTop_toBottomOf="@id/txtPass">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/bg_edittext_lightblue"
            android:id="@+id/et_passwordConfirm"
            android:hint="Konfirmasi Kata Sandi"
            android:padding="15dp"
            style="@style/EditTextAppearance"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/txtPass"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/bg_bottom_pink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_pink_login"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btn_masuk_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/bg_button_blue"
        android:text="@string/masuk"
        style="@style/TextAppearance1"
        android:textAllCaps="true"
        android:layout_margin="15dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/txtPassConfirm"/>

    <TextView
        android:id="@+id/tv_title3"
        style="@style/TextAppearance1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atau_masuk_melalui"
        android:textSize="14sp"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/btn_masuk_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linear1"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/bg_bottom_pink"
        app:layout_constraintTop_toBottomOf="@id/tv_title3">

        <Button
            android:id="@+id/btn_facebook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_button_white_border_blue"
            android:text="@string/facebook"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorBlue"
            android:textStyle="bold"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:drawableLeft="@drawable/facebook"
            style="@style/TextAppearance1"/>

        <Button
            android:id="@+id/btn_google"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_button_white_border_red"
            android:text="@string/google"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorRed"
            android:textStyle="bold"
            android:paddingLeft="53dp"
            android:paddingRight="53dp"
            android:drawableLeft="@drawable/google"
            style="@style/TextAppearance1"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>